Added json content to /load endpoint response
