# docs/openapi.yaml
@@ -22,6 +22,10 @@ paths:
       responses:
         '201':
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LoadResponse'
         '400':
           description: One or more invalid parameters
         '500':
@@ -119,10 +123,23 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/YearSaleResponse'
+        '404':
+          description: No records found for the given year
         '500':
           description: Internal Server Error
 components:
   schemas:
+    LoadResponse:
+      title: /load response
+      type: object
+      required:
+        - id
+        - importedAt
+      properties:
+        id:
+          $ref: '#/x-params/importId'
+        importedAt:
+          $ref: '#/x-params/importedAt'
     SellerResponse:
       title: /sellers/id response
       type: object
@@ -241,6 +258,14 @@ components:
           $ref: '#/components/schemas/SaleResponse'
 
 x-params:
+  importId:
+    type: integer
+    description: Internal (system) ID of the file import
+    example: 2413
+  importedAt:
+    type: date
+    description: Datetime of the file import
+    example: 2020-01-01 13:23:23
   id:
     type: integer
     description: The ID of the Seller
